# basic-discord-bot

./: Cargo.toml  README.md
src/: config.rs  main.rs
